Implemented Completed Filter and Updated Paramter in Documentation
