# src/controllers/taskController.js
@@ -1,8 +1,19 @@
 import * as taskService from '../services/taskService.js';
 
 export async function getTasks(req, res, next) {
-  const tasks = await taskService.getAllTasks();
-  res.json(tasks);
+  try{
+    const { completed } = req.query;
+
+      const filter =
+        completed === 'true' ? true :
+        completed === 'false' ? false :
+        undefined;
+
+    const tasks = await taskService.getAllTasks(filter);
+    res.json(tasks);
+  }catch(err){
+    next(err);
+  }
 }
 
 export async function createTask(req, res, next) {
